--- a/cfg/config.cfg
+++ b/cfg/config.cfg
@@ -11,7 +11,10 @@ bind "d" "+moveright"
 bind "e" "+use"
 bind "f" "impulse 100"
 bind "g" "dropprimary"
+bind "i" "impulse 101"
 bind "j" "toggle mat_specular"
+bind "l" "buildcubemaps"
+bind "n" "sv_cheats 1"
 bind "p" "headtrack_reset_home_pos"
 bind "q" "lastinv"
 bind "r" "+reload"
@@ -197,7 +200,7 @@ cl_spec_mode "1"
 cl_disablehtmlmotd "0"
 cl_npc_speedmod_intime "0.25"
 cl_npc_speedmod_outtime "1.5"
-fov_desired "75"
+fov_desired "90.000000"
 g_antlion_maxgibs "16"
 hud_quickinfo "1"
 hud_showemptyweaponslots "1"
@@ -255,7 +258,7 @@ snd_mute_losefocus "1"
 voice_scale "1"
 voice_enable "1"
 voice_forcemicrecord "1"
-name "ivanhen99"
+name "Xenthio"
 password ""
 cl_clanid "0"
 sv_unlockedchapters "1"
