--- a/cfg/config.cfg
+++ b/cfg/config.cfg
@@ -258,7 +258,7 @@ snd_mute_losefocus "1"
 voice_scale "1"
 voice_enable "1"
 voice_forcemicrecord "1"
-name "Xenthio"
+name "ivanhen99"
 password ""
 cl_clanid "0"
 sv_unlockedchapters "1"
