--- a/cfg/config.cfg
+++ b/cfg/config.cfg
@@ -1,4 +1,3 @@
-mat_specular 0
 unbindall
 bind "1" "slot1"
 bind "2" "slot2"
@@ -233,7 +232,7 @@ sv_specaccelerate "5"
 sv_specspeed "3"
 sv_specnoclip "1"
 sv_backspeed "0.6"
-sv_skyname "sky_day01_01"
+sv_skyname "sky_day02_03"
 sv_stickysprint "0"
 xc_crouch_range "0.85"
 xc_use_crouch_limiter "0"
@@ -259,7 +258,7 @@ snd_mute_losefocus "1"
 voice_scale "1"
 voice_enable "1"
 voice_forcemicrecord "1"
-name "ivanhen99"
+name "Xenthio"
 password ""
 cl_clanid "0"
 sv_unlockedchapters "1"
